--- a/css/style.css
+++ b/css/style.css
@@ -1,86 +1,86 @@
 * {
-  padding: 0;
-  margin: 0;
-  border: none;
-  outline: none;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    border: none;
+    outline: none;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 :focus,
 :active {
-  outline: none;
+    outline: none;
 }
 
 a:focus,
 a:active {
-  outline: none;
+    outline: none;
 }
 
 nav,
 footer,
 header,
 aside {
-  display: block;
+    display: block;
 }
 
 html,
 body {
-  height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 1;
-  font-size: 14px;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    line-height: 1;
+    font-size: 14px;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
 input,
 button,
 textarea {
-  font-family: inherit;
+    font-family: inherit;
 }
 
 textarea {
-  resize: none;
+    resize: none;
 }
 
 input::-ms-clear {
-  display: none;
+    display: none;
 }
 
 button {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
+    padding: 0;
+    border: 0;
 }
 
 a,
 a:visited {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 ul li {
-  list-style: none;
+    list-style: none;
 }
 
 img {
-  vertical-align: top;
+    vertical-align: top;
 }
 
 h1,
@@ -89,124 +89,159 @@ h3,
 h4,
 h5,
 h6 {
-  font-size: inherit;
-  font-weight: 400;
+    font-size: inherit;
+    font-weight: 400;
 }
 
 .container {
-  max-width: 1080px;
-  margin: auto;
+    max-width: 1080px;
+    margin: auto;
 }
 
-.what-flexbox__title {
-  font-size: 30px;
-  line-height: 36px;
-  color: #445161;
+.title {
+    font-size: 30px;
+    line-height: 36px;
+    color: #445161;
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .wrapper {
-  min-height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+    min-height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
 }
 
 .content {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
 }
 
 .hi {
-  height: 325px;
-  background-color: #445162;
-  padding-top: 10px;
+    height: 325px;
+    background-color: #445162;
+    padding-top: 10px;
 }
 .hi__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-top: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    margin-top: 20px;
 }
 .hi__body {
-  color: #fff;
-  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+    color: #fff;
+    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
 }
 .hi__title {
-  font-size: 60px;
-  line-height: 1.2;
+    font-size: 60px;
+    line-height: 1.2;
 }
 .hi__list {
-  margin-top: 40px;
+    margin-top: 40px;
 }
 .hi__list li:before {
-  content: url("../../image/hi/icon_list.png");
-  font-size: 20px;
-  line-height: 36px;
-  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
-  padding: 0 15px 0 0;
+    content: url("../../image/hi/icon_list.png");
+    font-size: 20px;
+    line-height: 36px;
+    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+    padding: 0 15px 0 0;
 }
 .hi__image {
-  max-height: 217px;
+    max-height: 217px;
 }
 
 .what {
-  margin-top: 45px;
+    padding: 35px;
 }
 .what__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
 }
 .what__img {
-  max-width: 430px;
-  max-height: 186px;
+    max-width: 430px;
+    max-height: 186px;
 }
 
 .what-flexbox {
-  margin-left: 30px;
+    margin-left: 30px;
 }
 .what-flexbox__title {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 .what-flexbox__text {
-  font-size: 16px;
-  line-height: 24px;
-  color: #333333;
+    font-size: 16px;
+    line-height: 24px;
+    color: #333333;
 }
 .what-flexbox__text--indent {
-  margin-top: 15px;
+    margin-top: 15px;
+}
+
+.flex-columns {
+    padding: 35px 0;
+    max-height: 485px;
+    background-color: #f5f5f5;
+}
+.flex-columns__title {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.flex-container__row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+.flex-container__body {
+    margin-left: 15px;
+}
+.flex-container__image {
+    margin-bottom: 25px;
+}
+.flex-container__title {
+    font-size: 24px;
+    line-height: 30px;
+    color: #445161;
+}
+.flex-container__text {
+    font-size: 16px;
+    line-height: 24px;
+    color: #333333;
 }
 
 .footer {
-  background-color: #f5f5f5;
-  height: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+    background-color: #f5f5f5;
+    height: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 .footer__text {
-  text-align: center;
-  font-size: 12px;
-  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
-  color: #445162;
-  line-height: 24px;
-  letter-spacing: 0.025em;
+    text-align: center;
+    font-size: 12px;
+    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+    color: #445162;
+    line-height: 24px;
+    letter-spacing: 0.025em;
 }
