--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -20,6 +20,9 @@ body {
     // $ Общий контейнер
     @extend %container;
 }
+.title {
+    @extend %title;
+}
 // ! Hi
 .hi {
     // $ Блок hi
@@ -62,7 +65,7 @@ body {
 // ! What
 .what {
     // $ Оболочка
-    margin-top: 45px;
+    padding: 35px;
     &__row {
         // $ Flex контейнер
         display: flex;
@@ -78,7 +81,6 @@ body {
     margin-left: 30px;
     &__title {
         margin-bottom: 20px;
-        @extend %title;
     }
 
     &__text {
@@ -89,6 +91,42 @@ body {
 
     &__text--indent {
         margin-top: 15px;
+    }
+}
+// ! flex columns
+.flex-columns {
+    padding: 35px 0;
+    max-height: 485px;
+    background-color: #f5f5f5;
+    &__title {
+        text-align: center;
+        margin-bottom: 40px;
+    }
+}
+.flex-container {
+    &__row {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__body {
+        margin-left: 15px;
+    }
+
+    &__image {
+        margin-bottom: 25px;
+    }
+
+    &__title {
+        font-size: 24px;
+        line-height: 30px;
+        color: #445161;
+    }
+
+    &__text {
+        font-size: 16px;
+        line-height: 24px;
+        color: #333333;
     }
 }
 
