--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -3,6 +3,9 @@
 // $ Миксины, шаблоны, перемменые
 @import "additionally";
 // $ Основные настройки
+img {
+    user-select: none;
+}
 .wrapper {
     // $ Прижимает footer к низу
     min-height: 100%;
@@ -146,5 +149,83 @@
         color: #445162;
         line-height: 24px;
         letter-spacing: 0.025em;
+    }
+}
+// ! Flex vertical align
+.flex-vertical-align {
+    padding: 40px 0;
+    &__title {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+
+    &__body {
+        max-width: 990px;
+        margin: auto;
+    }
+
+    &__row {
+        display: flex;
+        margin: 0 -22.5px;
+    }
+
+    &__columns {
+        flex: 0 1 33.333%;
+        padding: 0 22.5px;
+        display: flex;
+    }
+
+    &__item {
+        color: #fff;
+        border-radius: 7px;
+        border: 1px solid #445162;
+        background-color: #445162;
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__subtitle {
+        text-align: center;
+        font-size: 24px;
+        line-height: 30px;
+        text-transform: uppercase;
+        padding: 10px;
+    }
+
+    &__suptitle {
+        text-align: center;
+        font-size: 40px;
+        line-height: 30px;
+        color: #445162;
+        background-color: #fff;
+        padding: 10px;
+    }
+
+    &__text {
+        padding: 15px;
+        font-family: Arial;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 400;
+        color: #ffffff;
+        flex: 1 1 auto;
+    }
+    &__text p {
+        padding: 0;
+        margin: 15px 0 0 0;
+    }
+    &__button {
+        width: 260px;
+        height: 40px;
+        background-color: #ffffff;
+        font-size: 18px;
+        line-height: 18px;
+        font-weight: 700;
+        color: #445161;
+        border-radius: 7px;
+        margin: 19px;
+    }
+
+    &__text--indent {
     }
 }
