--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -18,7 +18,6 @@ img {
     font-family: Arial, Helvetica, sans-serif;
 }
 .container {
-    // $ Общий контейнер
     @extend %container;
 }
 .title {
@@ -154,28 +153,33 @@ img {
 // ! Flex vertical align
 .flex-vertical-align {
     padding: 40px 0;
+    // $ Заголовок
     &__title {
         text-align: center;
         margin-bottom: 30px;
     }
 
     &__body {
+        // $ Ограничивает ширину
         max-width: 990px;
         margin: auto;
     }
 
     &__row {
+        // $ Flex контейнер
         display: flex;
         margin: 0 -22.5px;
     }
 
     &__columns {
+        // $ Flex колонки
         flex: 0 1 33.333%;
         padding: 0 22.5px;
         display: flex;
     }
 
     &__item {
+        // $ самаи колонки
         color: #fff;
         border-radius: 7px;
         border: 1px solid #445162;
@@ -185,6 +189,7 @@ img {
     }
 
     &__subtitle {
+        // $ Зоголовок вверху
         text-align: center;
         font-size: 24px;
         line-height: 30px;
@@ -193,6 +198,7 @@ img {
     }
 
     &__suptitle {
+        // $ Зоголовок в низу
         text-align: center;
         font-size: 40px;
         line-height: 30px;
@@ -202,6 +208,7 @@ img {
     }
 
     &__text {
+        // $ Текст
         padding: 15px;
         font-family: Arial;
         font-size: 14px;
@@ -211,10 +218,12 @@ img {
         flex: 1 1 auto;
     }
     &__text p {
+        // $ Отступ
         padding: 0;
         margin: 15px 0 0 0;
     }
     &__button {
+        // $ Кнопка
         width: 260px;
         height: 40px;
         background-color: #ffffff;
@@ -224,8 +233,5 @@ img {
         color: #445161;
         border-radius: 7px;
         margin: 19px;
-    }
-
-    &__text--indent {
     }
 }
