--- a/css/style.css
+++ b/css/style.css
@@ -104,11 +104,16 @@ h6 {
   color: #445161;
 }
 
+body {
+  min-width: 1060px;
+}
+
 img {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  max-width: 100%;
 }
 
 .wrapper {
@@ -146,6 +151,7 @@ img {
 .hi__body {
   color: #fff;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+  padding: 0 10px;
 }
 .hi__title {
   font-size: 60px;
@@ -207,6 +213,7 @@ img {
 }
 
 .flex-container__row {
+  padding: 0 3px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -268,10 +275,8 @@ img {
   margin: 0 -22.5px;
 }
 .flex-vertical-align__columns {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 33.333%;
-          flex: 0 1 33.333%;
   padding: 0 22.5px;
+  max-width: 33.333%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -309,11 +314,10 @@ img {
   font-family: Arial;
   font-size: 14px;
   line-height: 24px;
-  font-weight: 400;
   color: #ffffff;
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
 }
 .flex-vertical-align__text p {
   padding: 0;
