--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -3,8 +3,12 @@
 // $ Миксины, шаблоны, перемменые
 @import "additionally";
 // $ Основные настройки
+body {
+    min-width: 1060px;
+}
 img {
     user-select: none;
+    max-width: 100%;
 }
 .wrapper {
     // $ Прижимает footer к низу
@@ -40,6 +44,7 @@ img {
         // $ Основые настройки для title и list
         color: #fff;
         text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+        padding: 0 10px;
     }
 
     &__title {
@@ -106,6 +111,7 @@ img {
 .flex-container {
     // $ Оболочка
     &__row {
+        padding: 0 3px;
         // $ Flex контейнер
         display: flex;
         justify-content: space-between;
@@ -173,8 +179,8 @@ img {
 
     &__columns {
         // $ Flex колонки
-        flex: 0 1 33.333%;
         padding: 0 22.5px;
+        max-width: 33.333%;
         display: flex;
     }
 
@@ -213,9 +219,8 @@ img {
         font-family: Arial;
         font-size: 14px;
         line-height: 24px;
-        font-weight: 400;
         color: #ffffff;
-        flex: 1 1 auto;
+        flex: 1 0 auto;
     }
     &__text p {
         // $ Отступ
