--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -3,9 +3,7 @@
 // $ Миксины, шаблоны, перемменые
 @import "additionally";
 // $ Основные настройки
-body {
-    min-width: 1060px;
-}
+
 img {
     user-select: none;
     max-width: 100%;
@@ -30,7 +28,7 @@ img {
 // ! Hi
 .hi {
     // $ Блок hi
-    height: 325px;
+    height: 100%;
     background-color: #445162;
     padding-top: 10px;
     &__row {
@@ -101,7 +99,6 @@ img {
 // ! flex columns
 .flex-columns {
     padding: 35px 0;
-    max-height: 485px;
     background-color: #f5f5f5;
     &__title {
         text-align: center;
@@ -110,11 +107,13 @@ img {
 }
 .flex-container {
     // $ Оболочка
+    width: 100%;
     &__row {
         padding: 0 3px;
         // $ Flex контейнер
         display: flex;
         justify-content: space-between;
+        flex: 0 1 25%;
     }
 
     &__body {
