--- a/source/scss/zero.scss
+++ b/source/scss/zero.scss
@@ -1,3 +1,4 @@
+// ! Обнуление
 * {
     padding: 0;
     margin: 0;
@@ -80,4 +81,15 @@ h5,
 h6 {
     font-size: inherit;
     font-weight: 400;
+}
+// ! Стили для noscript
+.noscript {
+    &__title {
+    }
+
+    &__title-sup {
+    }
+
+    &__text {
+    }
 }
