--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -18,7 +18,6 @@ img {
     // $ Прижимает footer к низу
     flex: 1 1 auto;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 0 10px;
 }
 .container {
     @extend %container;
@@ -31,7 +30,7 @@ img {
     // $ Блок hi
     height: 100%;
     background-color: #445162;
-    padding-top: 10px;
+    padding: 15px 0;
     &__row {
         // $ Flex контейнер
         display: flex;
@@ -56,10 +55,11 @@ img {
         margin-top: 40px;
         & li:before {
             content: url("../../image/hi/icon_list.png");
+            padding: 0 15px 0 0;
+        }
+        & li {
             font-size: 20px;
             line-height: 36px;
-            text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
-            padding: 0 15px 0 0;
         }
     }
     &__image {
@@ -88,7 +88,8 @@ img {
     }
 
     &__text {
-        font-size: 16px;
+        // fz:16px;
+        font-size: calc(16px + 4 * (100vw / 1280));
         line-height: 24px;
         color: #333333;
     }
@@ -110,11 +111,11 @@ img {
     // $ Оболочка
     width: 100%;
     &__row {
-        padding: 0 3px;
         // $ Flex контейнер
+        margin-right: -25px;
         display: flex;
         justify-content: space-between;
-        flex: 0 1 25%;
+        flex: 1 1 25%;
     }
 
     &__body {
@@ -124,16 +125,20 @@ img {
 
     &__image {
         margin-bottom: 25px;
+        max-width: 100%;
+        max-height: 100%;
     }
 
     &__title {
-        font-size: 24px;
+        // fz:24px
+        font-size: calc(20px + 9 * (100vw / 1280));
         line-height: 30px;
         color: #445161;
     }
 
     &__text {
-        font-size: 16px;
+        // fz: 16px;
+        font-size: calc(16px + 4 * (100vw / 1280));
         line-height: 24px;
         color: #333333;
     }
@@ -143,17 +148,19 @@ img {
 .footer {
     // $ Расположение footer текста
     background-color: #f5f5f5;
-    height: 50px;
+    // height: 50px;
+    height: calc(70px + (70 - 50) * ((100vw - 320px) / (1600 - 320)));
     display: flex;
     align-items: center;
     &__text {
         // $ Footer текст
         text-align: center;
-        font-size: 12px;
-        text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+        // fz: 12px;
+        font-size: calc(12px + 14 * (100vw / 1280));
         color: #445162;
-        line-height: 24px;
         letter-spacing: 0.025em;
+    }
+    @media (min-width: 1280px) {
     }
 }
 // ! Flex vertical align
@@ -183,7 +190,6 @@ img {
         max-width: 33.333%;
         display: flex;
     }
-
     &__item {
         // $ самаи колонки
         color: #fff;
@@ -217,7 +223,8 @@ img {
         // $ Текст
         padding: 15px;
         font-family: Arial;
-        font-size: 14px;
+        // fz: 14px;
+        font-size: calc(14px + 5 * (100vw / 1280));
         line-height: 24px;
         color: #ffffff;
         flex: 1 0 auto;
@@ -238,5 +245,10 @@ img {
         color: #445161;
         border-radius: 7px;
         margin: 19px;
+    }
+    @media (max-width: 900px) {
+        &__columns {
+            padding: 0 0.5px;
+        }
     }
 }
