--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,9 +1,6 @@
 // Обнуление
 @import "zero";
-// $ Миксины, шаблоны, перемменые
-@import "additionally";
 // $ Основные настройки
-
 img {
     user-select: none;
     max-width: 100%;
@@ -19,236 +16,27 @@ img {
     flex: 1 1 auto;
     font-family: Arial, Helvetica, sans-serif;
 }
-.container {
-    @extend %container;
+// $ Миксины, шаблоны, перемменые
+%container {
+    // $ Общий контейнер
+    max-width: 1060px;
+    margin: auto;
 }
-.title {
-    @extend %title;
+%title {
+    // $ Для заголовков "Что такое FlexBox?" и "Колонки с flex-контейнерами"
+    // fz: 30px;
+    font-size: calc(30px + 5 * (100vw / 1280));
+    line-height: 36px;
+    color: #445161;
 }
-// ! Hi
-.hi {
-    // $ Блок hi
-    height: 100%;
-    background-color: #445162;
-    padding: 15px 0;
-    &__row {
-        // $ Flex контейнер
-        display: flex;
-        justify-content: space-between;
-        margin-top: 20px;
-    }
+.container {@extend %container;}
+.title {@extend %title;}
 
-    &__body {
-        // $ Основые настройки для title и list
-        color: #fff;
-        text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
-        padding: 0 10px;
-    }
 
-    &__title {
-        // $ title
-        font-size: 60px;
-        line-height: 1.2;
-    }
-    &__list {
-        // $list
-        margin-top: 40px;
-        & li:before {
-            content: url("../../image/hi/icon_list.png");
-            padding: 0 15px 0 0;
-        }
-        & li {
-            font-size: 20px;
-            line-height: 36px;
-        }
-    }
-    &__image {
-        max-height: 217px;
-    }
-}
-// ! What
-.what {
-    // $ Оболочка
-    padding: 35px;
-    &__row {
-        // $ Flex контейнер
-        display: flex;
-        justify-content: space-between;
-    }
-    &__img {
-        max-width: 430px;
-        max-height: 186px;
-    }
-}
-.what-flexbox {
-    // $ Оболочка Для текста
-    margin-left: 30px;
-    &__title {
-        margin-bottom: 20px;
-    }
 
-    &__text {
-        // fz:16px;
-        font-size: calc(16px + 4 * (100vw / 1280));
-        line-height: 24px;
-        color: #333333;
-    }
-
-    &__text--indent {
-        margin-top: 15px;
-    }
-}
-// ! flex columns
-.flex-columns {
-    padding: 35px 0;
-    background-color: #f5f5f5;
-    &__title {
-        text-align: center;
-        margin-bottom: 40px;
-    }
-}
-.flex-container {
-    // $ Оболочка
-    width: 100%;
-    &__row {
-        // $ Flex контейнер
-        margin-right: -25px;
-        display: flex;
-        justify-content: space-between;
-        flex: 1 1 25%;
-    }
-
-    &__body {
-        // $ Оболочка для &__image, &__title, &__text
-        margin-left: 15px;
-    }
-
-    &__image {
-        margin-bottom: 25px;
-        max-width: 100%;
-        max-height: 100%;
-    }
-
-    &__title {
-        // fz:24px
-        font-size: calc(20px + 9 * (100vw / 1280));
-        line-height: 30px;
-        color: #445161;
-    }
-
-    &__text {
-        // fz: 16px;
-        font-size: calc(16px + 4 * (100vw / 1280));
-        line-height: 24px;
-        color: #333333;
-    }
-}
-
-// ! Footer
-.footer {
-    // $ Расположение footer текста
-    background-color: #f5f5f5;
-    // height: 50px;
-    height: calc(70px + (70 - 50) * ((100vw - 320px) / (1600 - 320)));
-    display: flex;
-    align-items: center;
-    &__text {
-        // $ Footer текст
-        text-align: center;
-        // fz: 12px;
-        font-size: calc(12px + 14 * (100vw / 1280));
-        color: #445162;
-        letter-spacing: 0.025em;
-    }
-    @media (min-width: 1280px) {
-    }
-}
-// ! Flex vertical align
-.flex-vertical-align {
-    padding: 40px 0;
-    // $ Заголовок
-    &__title {
-        text-align: center;
-        margin-bottom: 30px;
-    }
-
-    &__body {
-        // $ Ограничивает ширину
-        max-width: 990px;
-        margin: auto;
-    }
-
-    &__row {
-        // $ Flex контейнер
-        display: flex;
-        margin: 0 -22.5px;
-    }
-
-    &__columns {
-        // $ Flex колонки
-        padding: 0 22.5px;
-        max-width: 33.333%;
-        display: flex;
-    }
-    &__item {
-        // $ самаи колонки
-        color: #fff;
-        border-radius: 7px;
-        border: 1px solid #445162;
-        background-color: #445162;
-        display: flex;
-        flex-direction: column;
-    }
-
-    &__subtitle {
-        // $ Зоголовок вверху
-        text-align: center;
-        font-size: 24px;
-        line-height: 30px;
-        text-transform: uppercase;
-        padding: 10px;
-    }
-
-    &__suptitle {
-        // $ Зоголовок в низу
-        text-align: center;
-        font-size: 40px;
-        line-height: 30px;
-        color: #445162;
-        background-color: #fff;
-        padding: 10px;
-    }
-
-    &__text {
-        // $ Текст
-        padding: 15px;
-        font-family: Arial;
-        // fz: 14px;
-        font-size: calc(14px + 5 * (100vw / 1280));
-        line-height: 24px;
-        color: #ffffff;
-        flex: 1 0 auto;
-    }
-    &__text p {
-        // $ Отступ
-        padding: 0;
-        margin: 15px 0 0 0;
-    }
-    &__button {
-        // $ Кнопка
-        width: 260px;
-        height: 40px;
-        background-color: #ffffff;
-        font-size: 18px;
-        line-height: 18px;
-        font-weight: 700;
-        color: #445161;
-        border-radius: 7px;
-        margin: 19px;
-    }
-    @media (max-width: 900px) {
-        &__columns {
-            padding: 0 0.5px;
-        }
-    }
-}
+// $ Отделтные блоки кода
+@import "main/_hi.scss";
+@import "main/_what.scss";
+@import "main/_flex-columns.scss";
+@import "main/_flex-vertical-align.scss";
+@import "main/_footer.scss";
