--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ img {
 }
 
 .title {
-  font-size: calc(30px + 5 * (100vw / 1280));
+  font-size: calc(18px + 12 * (100vw / 1080));
   line-height: 36px;
   color: #445161;
 }
@@ -142,7 +142,7 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-top: 20px;
+  margin-top: calc(5px + 15 * (100vw / 1280));
 }
 .hi__body {
   color: #fff;
@@ -150,7 +150,7 @@ img {
   padding: 0 10px;
 }
 .hi__title {
-  font-size: 60px;
+  font-size: calc(35px + 15 * (100vw / 1280));
   line-height: 1.2;
 }
 .hi__list {
@@ -161,11 +161,22 @@ img {
   padding: 0 15px 0 0;
 }
 .hi__list li {
-  font-size: 20px;
+  font-size: calc(9px + 11 * (100vw / 1280));
   line-height: 36px;
 }
 .hi__image {
   max-height: 217px;
+}
+@media (max-width: 768px) {
+  .hi li {
+    font-size: calc(9px + 11 * ((100vw - 320px) / (768 - 320)));
+  }
+  .hi__title {
+    font-size: calc(35px + 15 * ((100vw - 320px) / (768 - 320)));
+  }
+  .hi__row {
+    margin-top: calc(5px + 15 * ((100vw - 320px) / (768 - 320)));
+  }
 }
 
 .what {
@@ -327,7 +338,7 @@ img {
 
 .footer {
   background-color: #f5f5f5;
-  height: calc(70px + (70 - 50) * ((100vw - 320px) / (1600 - 320)));
+  height: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -337,7 +348,7 @@ img {
 }
 .footer__text {
   text-align: center;
-  font-size: calc(12px + 14 * (100vw / 1280));
+  font-size: 12px;
   color: #445162;
   letter-spacing: 0.025em;
 }
