adaptive _flex-columns.scss

--- a/source/scss/main/_what.scss
+++ b/source/scss/main/_what.scss
@@ -8,8 +8,7 @@
         justify-content: space-between;
     }
     &__img {
-        max-width: 500px;
-        max-height: 145px;
+        object-fit: contain;
     }
     @media (max-width: 866px) {
         &__row {
