--- a/css/style.css
+++ b/css/style.css
@@ -204,8 +204,8 @@ img {
           justify-content: space-between;
 }
 .what__img {
-  max-width: 500px;
-  max-height: 145px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 @media (max-width: 866px) {
   .what__row {
@@ -250,7 +250,6 @@ img {
   width: 100%;
 }
 .flex-container__row {
-  margin-right: -25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -265,19 +264,37 @@ img {
   margin-left: 15px;
 }
 .flex-container__image {
-  margin-bottom: 25px;
+  margin: 25px 0;
   max-width: 100%;
-  max-height: 100%;
+  height: 200px;
 }
 .flex-container__title {
-  font-size: calc(20px + 9 * (100vw / 1280));
+  font-size: calc(16px + 8 * (100vw / 1280));
   line-height: 30px;
   color: #445161;
 }
 .flex-container__text {
-  font-size: calc(16px + 4 * (100vw / 1280));
+  font-size: calc(12px + 4 * (100vw / 1280));
   line-height: 24px;
+  max-width: 300px;
   color: #333333;
+}
+@media (max-width: 768px) {
+  .flex-container__title {
+    font-size: calc(16 + 8 * ((100vw - 320px) / (1080 - 320)));
+  }
+  .flex-container__text {
+    font-size: calc(12 + 4 * ((100vw - 320px) / (1080 - 320)));
+  }
+}
+@media (max-width: 879px) {
+  .flex-container__row {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .flex-vertical-align {
