--- a/source/scss/main/_flex-columns.scss
+++ b/source/scss/main/_flex-columns.scss
@@ -12,7 +12,6 @@
     width: 100%;
     &__row {
         // $ Flex контейнер
-        margin-right: -25px;
         display: flex;
         justify-content: space-between;
         flex: 1 1 25%;
@@ -24,22 +23,37 @@
     }
 
     &__image {
-        margin-bottom: 25px;
+        margin: 25px 0;
         max-width: 100%;
-        max-height: 100%;
+        height: 200px;
     }
 
     &__title {
-        // fz:24px
-        font-size: calc(20px + 9 * (100vw / 1280));
+        // font-size: 24px;
+        font-size: calc(16px + 8 * (100vw / 1280));
         line-height: 30px;
         color: #445161;
     }
 
     &__text {
-        // fz: 16px;
-        font-size: calc(16px + 4 * (100vw / 1280));
+        // font-size: 16px;
+        font-size: calc(12px + 4 * (100vw / 1280));
         line-height: 24px;
+        max-width: 300px;
         color: #333333;
+    }
+    @media (max-width: 768px) {
+        &__title {
+            font-size: calc(16 + 8 * ((100vw - 320px) / (1080 - 320)));
+        }
+        &__text {
+            font-size: calc(12 + 4 * ((100vw - 320px) / (1080 - 320)));
+        }
+    }
+    @media (max-width: 879px) {
+        &__row {
+            justify-content: start;
+            flex-wrap: wrap;
+        }
     }
 }
